# taskFlow-web-cli

./: .gitignore  LICENSE  README.md  index.html  taskFlow.cabal  tasks.txt  todo.cabal
public/: index.html
src/: Main.hs
src/Todo/: IO.hs  List.hs  Todo.Message.hs
