cabal-version:       >=1.10
name:                taskFlow
version:             0.1.2.1
synopsis:            A simple command-line task manager built in Haskell
description:         A lightweight terminal-based to-do list application written in Haskell.
                     It helps users manage tasks by creating, listing, and deleting items from the command line.
license:             BSD-3-Clause
license-file:        LICENSE
author:              Princess Felix
maintainer:          your-email@example.com
category:            Development
build-type:          Simple
extra-source-files:  README.md, CHANGELOG.md

executable taskFlow
  main-is:             Main.hs
  hs-source-dirs:      src
  build-depends:       base >= 4.12 && < 5,
                       directory,
                       strict
  other-modules:       Todo.IO, Todo.Messages, Todo.List
  default-language:    Haskell2010
