cabal-version:       >=1.10
name:                taskFlow
version:             0.1.2.1
synopsis:            A simple command-line task manager built in Haskell
description:         A lightweight terminal-based to-do list application written in Haskell.
                     It helps users manage tasks by creating, listing, and deleting items from the command line.
license:             BSD3
license-file:        LICENSE
author:              Onyinyechi Eze
maintainer:          onyinyechieze46@gmail.com
category:            Development
build-type:          Simple
extra-source-files:  README.md, CHANGELOG.md

executable taskFlow
  main-is:             Main.hs
  hs-source-dirs:      src
  other-modules:       Todo.IO
  build-depends:
      base >=4.7 && <5,
      scotty,
      wai-middleware-static,
      text,
      directory
  default-language:    Haskell2010
